css/styles.css
body {
    background-color: #0f0f0f;
    color: #ffffff;
    font-family: 'Montserrat', sans-serif, serif;
    font-size: 1em;
    scroll-behavior: smooth;
}

form {
    margin: auto;
}

img {
    max-height: 100%;
    max-width: 100%;
    margin: auto;
}

input, textarea {
    padding: 1em;
    width: 100%;
}

input[type=submit] {
    background-color: #0f0f0f;
    border: solid;
    border-radius: 8px;
    border-width: 1px;
    color: #f0f0f0;
    cursor: pointer;
    margin: 3em 0em;
    text-transform: uppercase;
    transition-duration: 0.3s;
}

input[type=submit]:hover {
    background-color: #ffffff;
    color: #000000;
}

label {
    display: block;
    margin: 1em 0em;
}

.about-text {
    font-size: 1em;
    margin: 0em;
    padding-top: 1em;
    padding-bottom: 1em;
}

.email-body {
    padding-bottom: 2vw;
}

.home-img {
    position: relative;
    margin-top:3.5em;
}

.foot-links {
    background-color: #505050;
    display: flex;
    justify-content: center;
    padding-top: 2vw;
    padding-bottom: 2vw;
}

.link-button {
    margin-left: 1em;
    margin-right: 1em;
    font-size: 1.75rem;
}

.page-subhead {
    font-size: 3em;
    margin: 0em;
    text-align: center;
    text-transform: uppercase;
}

.project-body {
    display: flex;
    padding-top: 2em;
    padding-bottom: 2em;
}

.project-desc {
    flex: 1;
}

.project-head {
    font-size: 2em;
    margin: 0;
}

.project-img {
    position: relative;
}

.project-subtext {
    font-size: 1em;
    font-style: italic;
    margin: 0em;
    padding-top: 1em;
    padding-bottom: 1em;
}

.project-bodytext {
    font-size: 1em;
    margin: 0em;
    padding-top: 1em;
    padding-bottom: 1em;
}

.project-links {
    margin: 0em;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
}

.section-body {
    align-self: center;
    padding-top: 2em;
    padding-left: 3rem;
    padding-right: 3rem;
    padding-bottom: 2em;
}

.section-text {
    font-size: 1em;
    margin: 0em;
    padding-top: 1em;
    padding-left: 5em;
    padding-right: 5em;
    padding-bottom: 1em;
}

.navbar {
    background-color: #505050;
    padding-top: 2vw;
    padding-bottom: 2vw;
    justify-content: center;
}

.nav-contents {
    display: grid;
    grid-template-columns: 1fr 1fr;
    width: 100%;
    margin: auto;
}

/*
Text color for navbar unhovered: #f0f0f0
Text color for navbar hovered: #ffffff
*/

.nav-home {
    font-size: 1em;
    letter-spacing: 2px;
    margin-top: 0;
    margin-bottom: 0;
    margin-left: 1em;
    margin-right: 1em;
    text-transform: uppercase;
}

.nav-button {
    color: #f0f0f0;
    text-decoration: none;
    transition-duration: 0.3s;
    margin-left: 1em;
    margin-right: 1em;
}

.nav-button:hover {
    color: #ffffff;
}

.nav-selection {
    display: flex;
    font-family: 'Montserrat', sans-serif, serif;
    font-size: 1em;
    letter-spacing: 2px;
    list-style: none;
    margin-top: 0;
    margin-bottom: 0;
    padding:0 0;
    justify-content: end;
    text-transform: uppercase;
}

/*
.nav-selection li {
    margin-left: 1em;
    margin-right: 1em;
}
*/

.resume-link {
    align-items: center;
    background-color: #0f0f0f;
    border: solid;
    border-radius: 8px;
    border-width: 1px;
    color: #f0f0f0;
    cursor: pointer;
    display: flex;
    font-size: 1em;
    justify-content: center;
    margin: 1em 2em;
    padding: 1em 2em;
    text-align: center;
    text-decoration: none;
    text-transform: uppercase;
    transition-duration: 0.3s;
}

.resume-link:hover {
    background-color: #ffffff;
    color: #000000;
}

.media-link {
    background-color: #0f0f0f;
    border: solid;
    border-radius: 8px;
    border-width: 1px;
    color: #f0f0f0;
    cursor: pointer;
    padding-top: 0.5em;
    padding-left: 1em;
    padding-right: 1em;
    padding-bottom: 0.5em;
    text-decoration: none;
    text-transform: uppercase;
    transition-duration: 0.3s;
}

.media-link:hover {
    background-color: #ffffff;
    color: #000000;
}

.media-close {
    background-color: #0f0f0f;
    border: solid;
    border-radius: 8px;
    border-width: 1px;
    color: #f0f0f0;
    cursor: pointer;
    padding-top: 0.5em;
    padding-left: 1em;
    padding-right: 1em;
    padding-bottom: 0.5em;
    text-decoration: none;
    text-transform: uppercase;
    transition-duration: 0.3s;
}

.media-close:hover {
    background-color: #ffffff;
    color: #000000;
}

.mediaWindow-overlay {
    display: none;
    position: fixed;
    background-color: rgba(0, 0, 0, 0.5);
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
}

.media-window {
    display: none;
    position: fixed;
    background-color: #0f0f0f;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    margin-left: auto;
    margin-right: auto;
    height: 75vh;
    width: 85vw;
    border-radius: 3px;
    grid-template-rows: 85% 15%;
    align-items: center;
    padding: 1.25em;
    border: 1px solid white;
}

.media-space {
    position: relative;
    justify-self: center;
    background-color: #505050;
    height: 100%;
    width: 100%;
    margin-top: 1vh;
    margin-bottom: 1vh;
    align-content: center;
    text-align: center;
    overflow: hidden;
}

.media-previewBar {
    justify-self: center;
    height: 100%;
    width: 100%;
    margin-top: 1vh;
    margin-bottom: 1vh;
    align-content: center;
    text-align: center;
}

.media-files {
    display: flex;
    transition: transform 0.3s ease-in-out;
}

.media-files div {
    width: 100%;
    flex-shrink: 0;
}

.media-button {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    background-color: rgba(0, 0, 0, 0.5);
    border: none;
    color: white;
    font-size: 18px;
    cursor: pointer;
    z-index: 10;
    padding: 10px;
    border-radius: 50%;
}

.media-button.left {
    left: 10px;
}

.media-button.right {
    right: 10px;
}

.media-dots {
    display: flex;
    position: absolute;
    justify-content: center;
    gap: 10px;
    margin-top: 10px;
    margin-bottom: 10px;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
}

.media-dot {
    width: 12px;
    height: 12px;
    background-color: gray;
    border-radius: 50%;
    cursor: pointer;
}

.media-dot.active {
    background-color: lightgray;
}

#project_searchengine {
    .project-subtext {
        display: none
    }
}

#project_starcraft {
    .project-subtext {
        display: none
    }
}

#project_sleeptracker {
    .project-subtext {
        display: none
    }
}

#project_coachsays {
    .project-subtext {
        display: none
    }
}

#project_spotify {
    .project-subtext {
        display: none
    }
}

#project_tweet {
    .project-subtext {
        display: none
    }
}

#project_minesweeper {
    .project-subtext {
        display: none
    }
}

@media screen and (max-width: 350px) {
    .navbar {
        grid-template-columns: 1fr;
        padding-top: 5vw;
        padding-bottom: 5vw;
    }
    .nav-contents {
        grid-template-columns: 1fr;
    }
    .nav-home {
        text-align: center;
    }
    .nav-selection {
        display: none;
    }
}

@media screen  and (min-width: 350px) and (max-width: 640px) {
    .navbar {
        padding-top: 3.5vw;
        padding-bottom: 3.5vw;
    }
    .nav-contents {
        grid-template-columns: 1fr;
        gap: 0.5em;
    }
    .nav-home {
        text-align: center;
    }
    .nav-selection {
        justify-content: center;
    }
    .home-img {
        margin-top: 5em;
    }
}

@media screen and (min-width: 720px) and (max-width: 1024px) {
    .section-body {
        margin-left: auto;
        margin-right: auto;
        max-width: 720px;
    }
}

@media screen and (min-width: 1024px) and (max-width: 1600px) {
    .nav-contents {
        max-width: 1280px;
    }
    .section-body {
        margin-left: auto;
        margin-right: auto;
        max-width: 1024px;
    }
}

@media screen and (min-width: 1600px) {
    .nav-contents {
        max-width: 1520px;
    }
    .section-body {
        margin-left: auto;
        margin-right: auto;
        max-width: 1280px;
    }
}

